<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartpole</name>
  <version>0.0.1</version>
  <description>Cartpole support meta package</description>
  <maintainer email="59701038+JChunX@users.noreply.github.com">jasonx</maintainer>
  <license>MIT</license>

  <exec_depend>cartpole_interfacess</exec_depend>
  <exec_depend>cartpole_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
